--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -248,7 +248,7 @@ if (!selectedSubjectId) {
     /* ===============================
        ENSURE competency_assessment
     =============================== */
- const { error: caUpsertError } = await supabase
+const { error: caUpsertError } = await supabase
   .from("competency_assessments")
   .upsert({
     assessment_id: assessmentId,
@@ -257,12 +257,11 @@ if (!selectedSubjectId) {
     competency_id,
     achievement_level_id: finalAchievementLevelId,
     term: termName,
-
     academic_year: assessment.academic_year,
     teacher_id: user.id,
     created_by: user.id
   }, {
-    onConflict: "assessment_id,student_id,competency_id"
+    onConflict: "assessment_id,student_id,subject_id,competency_id"
   });
 
 
