--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -85,7 +85,6 @@ document.getElementById("loadReport").onclick = async () => {
   const termName =
     terms.find(t => t.id === term_id)?.name || "";
 
-
 const { data, error } = await supabase
   .from("assessment_results")
   .select(`
@@ -100,10 +99,11 @@ const { data, error } = await supabase
     achievement_levels(label),
     assessments!inner(teacher_id)
   `)
-  .eq("assessments.teacher_id", user.id)
-  .eq("term", term)
+  .eq("assessments.teacher_id", user.id) // 🔒 only this teacher
+  .eq("term", termName)                  // ✅ FIXED
   .order("last_name", { foreignTable: "students" })
   .order("name", { foreignTable: "competencies" });
+
 
   
   if (error || !data.length) {
