--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -42,12 +42,13 @@ const supabase = createClient(
 );
 
 
-
 const levelColor = {
-  "Emerging": "#f8d7da",
-  "Approaching": "#fff3cd",
-  "Achieved": "#d4edda"
+  "Below Expectations": "#f8d7da",
+  "Approaching Expectations": "#fff3cd",
+  "Meeting Expectations": "#d4edda",
+  "Exceeding Expectations": "#cce5ff" // future-proof
 };
+
 
 
   
