--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -43,10 +43,10 @@ const supabase = createClient(
 
 
 const levelColor = {
-  "Below Expectations": "#f8d7da",
-  "Approaching Expectations": "#fff3cd",
-  "Meeting Expectations": "#d4edda",
-  "Exceeding Expectations": "#cce5ff" // future-proof
+  "Below Expectations": "#f8d7da",       // 🔴 soft red → needs support
+  "Approaching Expectations": "#fff3cd", // 🟡 amber → getting there
+  "Meeting Expectations": "#d4edda",     // 🟢 green → on track
+  "Exceeding Expectations": "#cce5ff"    // 🔵 blue → outstanding
 };
 
 
